# sipcalc

./: .gitignore  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool
doc/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  interface.c  sub-func.c  sub.c
src/include/: Makefile  Makefile.in
